--- a/mods/d2k/mod.yaml
+++ b/mods/d2k/mod.yaml
@@ -1,11 +1,11 @@
 Metadata:
 	Title: Dune 2000
 	Description: Three great houses fight for the precious spice, melange.\nHe who controls the spice controls the universe!\n\nTry to establish a foothold on the desert planet Arrakis\nwith its harsh environmental conditions and protect your\nharvesting operations from giant sandworms as well as\nruthless enemy factions.
-	Version: {DEV_VERSION}
+	Version: bangkang-20160527
 	Author: the OpenRA Developers
 
 RequiresMods:
-	modchooser: {DEV_VERSION}
+	modchooser: bangkang-20160527
 
 Packages:
 	~^Content/d2k
@@ -26,7 +26,7 @@ Packages:
 
 MapFolders:
 	d2k|maps: System
-	~^maps/d2k/{DEV_VERSION}: User
+	~^maps/d2k/bangkang-20160527: User
 
 Rules:
 	d2k|rules/misc.yaml
