--- a/mods/modchooser/mod.yaml
+++ b/mods/modchooser/mod.yaml
@@ -1,6 +1,6 @@
 Metadata:
 	Title: Mod Chooser
-	Version: {DEV_VERSION}
+	Version: bangkang-20160527
 	Author: The OpenRA Developers
 	Hidden: true
 
