--- a/mods/ra/mod.yaml
+++ b/mods/ra/mod.yaml
@@ -1,11 +1,11 @@
 Metadata:
 	Title: Red Alert
 	Description: In a world where Hitler was assassinated and the Third Reich never\nexisted, the Soviet Union seeks power over all of Europe.  Allied\nagainst this Evil Empire, the free world faces a Cold War turned hot.\n\nRed Alert fuses the quick and fun gameplay of the original\nC&C: Red Alert, with balance improvements and new gameplay\nfeatures inspired by modern RTS games.
-	Version: {DEV_VERSION}
+	Version: bangkang-20160527
 	Author: the OpenRA Developers
 
 RequiresMods:
-	modchooser: {DEV_VERSION}
+	modchooser: bangkang-20160527
 
 Packages:
 	~^Content/ra
@@ -34,7 +34,7 @@ Packages:
 
 MapFolders:
 	ra|maps: System
-	~^maps/ra/{DEV_VERSION}: User
+	~^maps/ra/bangkang-20160527: User
 
 Rules:
 	ra|rules/misc.yaml
