--- a/mods/all/mod.yaml
+++ b/mods/all/mod.yaml
@@ -17,6 +17,7 @@ Chrome:
 Assemblies:
 	./mods/common/OpenRA.Mods.Common.dll
 	./mods/ra/OpenRA.Mods.RA.dll
+	./mods/ra2/OpenRA.Mods.RA2.dll
 	./mods/d2k/OpenRA.Mods.D2k.dll
 	./mods/cnc/OpenRA.Mods.Cnc.dll
 	./mods/ts/OpenRA.Mods.TS.dll
