BuildBot: version bump / upstream merge

--- a/mods/all/mod.yaml
+++ b/mods/all/mod.yaml
@@ -1,6 +1,6 @@
 Metadata:
 	Title: All mods
-	Version: bangkang-20160527
+	Version: kang-c79f52f
 	Author: The OpenRA Developers
 	Hidden: true
 	Description: Depending on all DLLs.
