--- a/mods/modchooser/mod.yaml
+++ b/mods/modchooser/mod.yaml
@@ -1,6 +1,6 @@
 Metadata:
 	Title: Mod Chooser
-	Version: bangkang-20160527
+	Version: kang-c79f52f
 	Author: The OpenRA Developers
 	Hidden: true
 
