--- a/mods/ra/mod.yaml
+++ b/mods/ra/mod.yaml
@@ -1,11 +1,11 @@
 Metadata:
 	Title: Red Alert
 	Description: In a world where Hitler was assassinated and the Third Reich never\nexisted, the Soviet Union seeks power over all of Europe.  Allied\nagainst this Evil Empire, the free world faces a Cold War turned hot.\n\nRed Alert fuses the quick and fun gameplay of the original\nC&C: Red Alert, with balance improvements and new gameplay\nfeatures inspired by modern RTS games.
-	Version: bangkang-20160527
+	Version: kang-c79f52f
 	Author: the OpenRA Developers
 
 RequiresMods:
-	modchooser: bangkang-20160527
+	modchooser: kang-c79f52f
 
 Packages:
 	~^Content/ra
@@ -34,7 +34,7 @@ Packages:
 
 MapFolders:
 	ra|maps: System
-	~^maps/ra/bangkang-20160527: User
+	~^maps/ra/kang-c79f52f: User
 
 Rules:
 	ra|rules/misc.yaml
