--- a/mods/ra2/mod.yaml
+++ b/mods/ra2/mod.yaml
@@ -1,11 +1,11 @@
 Metadata:
 	Title: Red Alert 2
 	Description: The Soviet Union is back!\nThis time to conquer the United States...
-	Version: bangkang-20160527
+	Version: kang-c79f52f
 	Author: the RA2 mod team
 
 RequiresMods:
-	modchooser: bangkang-20160527
+	modchooser: kang-c79f52f
 
 Packages:
 	~^Content/ra2
@@ -49,7 +49,7 @@ Packages:
 
 MapFolders:
 	ra2|maps: System
-	~^maps/ra2/bangkang-20160527: User
+	~^maps/ra2/kang-c79f52f: User
 
 Rules:
 	ra2|rules/proxy-actors.yaml
