--- a/mods/all/mod.yaml
+++ b/mods/all/mod.yaml
@@ -1,6 +1,6 @@
 Metadata:
 	Title: All mods
-	Version: kang-062d28f
+	Version: {DEV_VERSION}
 	Author: The OpenRA Developers
 	Hidden: true
 	Description: Depending on all DLLs.
