--- a/mods/cnc/mod.yaml
+++ b/mods/cnc/mod.yaml
@@ -1,11 +1,11 @@
 Metadata:
 	Title: Tiberian Dawn
 	Description: Join the Global Defense Initiative or the Brotherhood of Nod in our\nrecreation of the classic game that started it all.\n\nTiberian Dawn modernizes the original Command & Conquer gameplay\nby introducing features from later games, including per-factory\nproduction queues, unit veterancy, and capturable tech structures.
-	Version: kang-062d28f
+	Version: {DEV_VERSION}
 	Author: the OpenRA Developers
 
 RequiresMods:
-	modchooser: kang-062d28f
+	modchooser: {DEV_VERSION}
 
 Packages:
 	~^Content/cnc
@@ -34,7 +34,7 @@ Packages:
 
 MapFolders:
 	cnc|maps: System
-	~^maps/cnc/kang-062d28f: User
+	~^maps/cnc/{DEV_VERSION}: User
 
 Rules:
 	cnc|rules/misc.yaml
