--- a/mods/ts/mod.yaml
+++ b/mods/ts/mod.yaml
@@ -1,11 +1,11 @@
 Metadata:
 	Title: Tiberian Sun
 	Description: Developer stub, not yet ready for release!
-	Version: kang-062d28f
+	Version: {DEV_VERSION}
 	Author: the OpenRA Developers
 
 RequiresMods:
-	modchooser: kang-062d28f
+	modchooser: {DEV_VERSION}
 
 Packages:
 	~^Content/ts
@@ -55,7 +55,7 @@ Packages:
 
 MapFolders:
 	ts|maps: System
-	~^maps/ts/kang-062d28f: User
+	~^maps/ts/{DEV_VERSION}: User
 
 Rules:
 	ts|rules/ai.yaml
